--- a/.github/workflows/deploy-ghpages.yml
+++ b/.github/workflows/deploy-ghpages.yml
@@ -11,8 +11,10 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: 3.x
+          python-version: 3.8
       - run: make setup
+      - run: ls build
+      - run: ls build/RB3204-RBCX-library
       - run: sudo apt install doxygen
       - run: pip install mkdocs-material
       - run: pip install mkdocs-doxygen-snippets-plugin
